# pTuna

./: .gitgnore  README.md
CAD/: asanoha.scad  bottom-v2.scad  bottom-v2.stl  bottom.scad  bottom.stl  standoffs.scad  top-v2.scad  top-v2.stl  top.scad  top.stl
CAD/Drawing Assets/: CLIP_CR2032_RS_PRO_2378331.step  M2 x 0.4mm Thread 16mm LONG SOCKET HEAD CAP SCREW.STEP  M2.5 Hex Screw v2.step  RaspberryPi-PicoW-NoPins.step  SSD1306_OLED_Display(128x64).f3d  hexagonal_nut_normal_height_M2.5.step  keystone_1061.step  standoffs.stl  top-v2.stl
Firmware/debug/: CMakeLists.txt  main.c
Firmware/final/: CMakeLists.txt  build.sh  main.c
Firmware/final/assets/final/: Overlclock-Fail.xcf  Type 2.xcf  outputHex.sh
Firmware/final/assets/final/blend/: 2.blend
Firmware/final/assets/final/icon/: icon.xcf
Firmware/final/bitmaps/: mainUI.h  overclockFail.h  splashScreen.h
Firmware/final/notes/: notes.h
Fritzing/: Autorouted.fzz  NotAutorouted.fzz
